--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/UI测试/UITestVC.xib
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/UI测试/UITestVC.xib
@@ -19,6 +19,7 @@
                 <outlet property="textView_h" destination="0UK-JE-4eB" id="dS8-Eh-6fs"/>
                 <outlet property="topView" destination="13Z-oM-VZf" id="3EF-QM-p4z"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="widthLabel" destination="Afa-KD-SDY" id="e0I-1N-fzH"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -48,26 +49,25 @@
                         <constraint firstAttribute="width" constant="161" id="u4j-DX-xcO"/>
                     </constraints>
                 </view>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="https://mp.weixin.qq.com/s/yqnSahzYV_kWhPVnztTQ3Q" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OZe-ce-Eyp">
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OZe-ce-Eyp">
                     <rect key="frame" x="50" y="313" width="150" height="200"/>
                     <color key="backgroundColor" red="0.2901960784" green="0.56470588239999997" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="200" id="0UK-JE-4eB"/>
                         <constraint firstAttribute="width" constant="150" id="hoX-CR-TuX"/>
                     </constraints>
+                    <string key="text">httpsmp.weixin.qq.comsyqnSahzYV_kWhPVnztTQ3Qhttps:mp.weixin.qq.comsyqnSahzYV_kWhPVnztTQ3Qhttps:mp.weixin.qq.comsyqnSahzYV_kWhPVnztTQ3Qhttpsmp.weixin.qq.comsyqnSahzYV_kWhPVnztTQ3Qhttps:mp.weixin.qq.comsyqnSahzYV_kWhPVnztTQ3Qhttps:mp.weixin.qq.comsyqnSahzYV_kWhPVnztTQ3Q</string>
                     <color key="textColor" systemColor="labelColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="13Z-oM-VZf">
-                    <rect key="frame" x="229" y="159" width="97" height="51"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="13Z-oM-VZf">
+                    <rect key="frame" x="304" y="84" width="90" height="50"/>
                     <color key="backgroundColor" systemColor="systemIndigoColor"/>
-                </view>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="phe-5K-alU">
-                    <rect key="frame" x="229" y="212" width="97" height="51"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="90" id="bUh-qb-R0V"/>
+                        <constraint firstAttribute="height" constant="50" id="emB-3g-ycy"/>
+                    </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DeY-ja-ekh">
                     <rect key="frame" x="104" y="43" width="93" height="22"/>
@@ -83,39 +83,38 @@
                     <rect key="frame" x="191" y="595" width="97" height="51"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PXU-eD-XYn">
-                    <rect key="frame" x="20" y="832" width="100" height="30"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label_1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pg6-Ds-VyP">
-                            <rect key="frame" x="0.0" y="0.0" width="100" height="54"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="45"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" systemColor="systemPurpleColor"/>
-                    <constraints>
-                        <constraint firstItem="pg6-Ds-VyP" firstAttribute="top" secondItem="PXU-eD-XYn" secondAttribute="top" id="G10-9H-i91"/>
-                        <constraint firstAttribute="height" constant="30" id="O10-dy-FfU"/>
-                        <constraint firstAttribute="width" constant="100" id="ZAQ-Lm-5qc"/>
-                        <constraint firstAttribute="trailing" secondItem="pg6-Ds-VyP" secondAttribute="trailing" id="foT-5G-JFT"/>
-                        <constraint firstItem="pg6-Ds-VyP" firstAttribute="leading" secondItem="PXU-eD-XYn" secondAttribute="leading" id="sse-Rc-zhu"/>
-                        <constraint firstAttribute="bottom" relation="lessThanOrEqual" secondItem="pg6-Ds-VyP" secondAttribute="bottom" id="sxA-Qc-693"/>
-                    </constraints>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="phe-5K-alU">
+                    <rect key="frame" x="304" y="144" width="90" height="50"/>
+                    <color key="backgroundColor" systemColor="systemOrangeColor"/>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Afa-KD-SDY">
+                    <rect key="frame" x="8" y="563" width="40" height="20.5"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="40" id="FSX-HL-jhk"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="PXU-eD-XYn" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="4iT-QM-NnL"/>
-                <constraint firstItem="PXU-eD-XYn" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="BXc-jG-f2E"/>
+                <constraint firstItem="phe-5K-alU" firstAttribute="height" secondItem="13Z-oM-VZf" secondAttribute="height" id="1hg-xg-KfM"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="13Z-oM-VZf" secondAttribute="trailing" constant="20" id="2l6-Ue-gwh"/>
+                <constraint firstItem="Afa-KD-SDY" firstAttribute="top" secondItem="lll-pu-NQP" secondAttribute="bottom" constant="300" id="Bxy-Te-pHf"/>
+                <constraint firstItem="phe-5K-alU" firstAttribute="width" secondItem="13Z-oM-VZf" secondAttribute="width" id="G3V-hh-3Hn"/>
                 <constraint firstItem="UTX-5i-QA6" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="8" id="KRh-fG-7GZ"/>
                 <constraint firstItem="lll-pu-NQP" firstAttribute="top" secondItem="UTX-5i-QA6" secondAttribute="bottom" constant="57" id="Sio-Vx-p8C"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="UTX-5i-QA6" secondAttribute="trailing" constant="8" id="Tji-2l-J32"/>
                 <constraint firstItem="UTX-5i-QA6" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="UYV-xr-F1l"/>
                 <constraint firstItem="OZe-ce-Eyp" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="50" id="WhG-xA-Mve"/>
+                <constraint firstItem="Afa-KD-SDY" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="kfb-vs-yLy"/>
+                <constraint firstItem="13Z-oM-VZf" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="40" id="mCa-Hk-8do"/>
                 <constraint firstItem="lll-pu-NQP" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="43" id="q2c-Ip-Nlu"/>
                 <constraint firstItem="OZe-ce-Eyp" firstAttribute="top" secondItem="lll-pu-NQP" secondAttribute="bottom" constant="50" id="qaa-3j-sOl"/>
+                <constraint firstItem="phe-5K-alU" firstAttribute="top" secondItem="13Z-oM-VZf" secondAttribute="bottom" constant="10" id="sDH-eq-rrj"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="phe-5K-alU" secondAttribute="trailing" constant="20" id="zQ5-S4-Azd"/>
             </constraints>
             <point key="canvasLocation" x="-13.043478260869566" y="66.964285714285708"/>
         </view>
@@ -133,9 +132,6 @@
         </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemPurpleColor">
-            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemTealColor">
             <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
