--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/UI测试/UITestVC.xib
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/UI测试/UITestVC.xib
@@ -105,6 +105,11 @@
                         <constraint firstAttribute="height" constant="100" id="doO-kH-bWT"/>
                     </constraints>
                 </view>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uRX-9u-BV9">
+                    <rect key="frame" x="69" y="380" width="341" height="174"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <imageReference key="image" image="pop-1"/>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -132,6 +137,7 @@
     </objects>
     <resources>
         <image name="ic_voice_3" width="18.333333969116211" height="18.333333969116211"/>
+        <image name="pop-1" width="341" height="174"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
